alreadSynced passe to true OK